Dropdown component Openning Menu z-index  fixed

--- a/src/components/common/Dropdown/index.scss
+++ b/src/components/common/Dropdown/index.scss
@@ -50,6 +50,7 @@
     top: 100%;
     left: 0;
     right: 0;
+    z-index: 1000;
     margin-top: 5px;
     background: var(--color-tertiary);
     box-shadow: 0 0 10px 4px var(--color-primary-lighter);
